k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: aiohttp
spec:
    selector:
        matchLabels:
            app: aiohttp
    template:
        metadata:
            labels:
                app: aiohttp
        spec:
            containers:
            - image: chaowenguo/aiohttp:latest
              name: aiohttp
---
apiVersion: v1
kind: Service
metadata:
    name: aiohttp
spec:
    selector:
        app: aiohttp
    ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    dev.okteto.com/generate-host: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aiohttp
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
spec:
    selector:
        matchLabels: 
            app: postgres
    template: 
        metadata:
            labels:  
                app: postgres
        spec: 
            containers:
            - image: chaowenguo/postgres:latest
              name: postgres
              volumeMounts:
              - name: postgres-persistent-storage
                mountPath: /var/lib/postgresql/data
                subPath: postgres
            volumes:
            - name: postgres-persistent-storage
              persistentVolumeClaim:
                  claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
spec:
    selector:
        app: postgres
    ports:
    - port: 5432
